# supermarket-api-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyvenv.cfg  requirements.txt
mypackage.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/: database.py  main.py
src/models/: grocerytype.py  team.py
tests/: unit_tests.py
